# pod-on-shutdown

./: .gitignore  README.md  setup.cfg
localstack_extension_pod_on_shutdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pod_on_shutdown/: __init__.py  extension.py
