[metadata]
name = localstack-extension-pod-on-shutdown
version = 0.1.0
summary = This LocalStack extension will create a cloud pod when LS is shutting down automatically
url = https://github.com/lukqw/pod-on-shutdown
author = lukqw
author_email = lukas@localstack.cloud
description = This LocalStack extension will create a cloud pod when LS is shutting down automatically
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:

[options.extras_require]
dev =
    localstack-core>=1.0

[options.entry_points]
localstack.extensions =
    pod-on-shutdown = pod_on_shutdown.extension:PodOnShutdown
